[package]
name = "rustoom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.9"
sdl2 = "0.35"
bytes = "1.4"

[profile.dev]
# optimize only the dependencies
#  - see https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-dependencies
opt-level = "z"
